Fix overflow

--- a/app/assets/stylesheets/admin/blocks/_card.scss
+++ b/app/assets/stylesheets/admin/blocks/_card.scss
@@ -1,3 +1,4 @@
 .card {
   margin: 0 0 1.5rem;
+  overflow: visible;
 }
